wp-content/themes/WPUTheme/css/d-base.css
@charset "UTF-8";

/* ----------------------------------------------------------
  Typo
---------------------------------------------------------- */

html,
body {
    font: 13px/1.3 sans-serif;
}

/* ----------------------------------------------------------
   Layout
   ------------------------------------------------------- */

.main-header,
.main-container,
.main-footer {
    width: auto;
    margin: 0 auto 20px;
    padding: 0 10px;
    max-width: 940px;
    text-align: left;
}

/* ----------------------------------------------------------
   Header
   ------------------------------------------------------- */

.main-header {
    padding-top: 20px;
    padding-bottom: 20px;
    border-bottom: 1px solid #f0f0f0;
}

#searchform {
    margin-bottom: 10px;
}

.main-menu a,
.main-menu li {
    display: inline-block;
    line-height: 20px;
    *display: inline;
    *zoom: 1;
}

.main-menu li {
    margin-right: 10px;
}

/* ----------------------------------------------------------
  Main Container
---------------------------------------------------------- */

.main-container {
    overflow: auto;
}

.main,
.main-sidebar {
    float: left;
}

.main {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    width: 61.8033988%;
    padding-right: 20px;
}

.main-sidebar {
    width: 38.1966011%;
}

@media(max-width:700px) {
    .main,
    .main-sidebar {
        float: none;
        width: 100%;
    }

    .main {
        margin-bottom: 20px;
        padding-right: 0;
    }
}

/* ----------------------------------------------------------
   Content
   ------------------------------------------------------- */

article .cssc-content {
    min-height: 1px;
}

.wp-caption {
    margin-bottom: 10px;
    max-width: 100%;
}

.main-pagination {
    margin: 20px 0;
    text-align: center;
}

/* ----------------------------------------------------------
   Footer
   ------------------------------------------------------- */

.main-footer {
    padding: 20px;
    border-top: 1px solid #f0f0f0;
    color: #aaa;
}

